--- a/forms-basic.html
+++ b/forms-basic.html
@@ -430,7 +430,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="row form-group">
-                                                                    <div class="col col-md-3"><label for="selectSm" class=" form-control-label">Select Small</label></div>
+                                                                    <div class="col col-md-3"><label for="SelectLm" class=" form-control-label">Select Small</label></div>
                                                                     <div class="col-12 col-md-9">
                                                                         <select name="selectSm" id="SelectLm" class="form-control-sm form-control">
                                                                             <option value="0">Please select</option>
